started single site page template

--- a/themes/ca_theme/src/styles/_bases.scss
+++ b/themes/ca_theme/src/styles/_bases.scss
@@ -66,6 +66,7 @@ a, button {
     color: black;
     font-size: 1.75rem;
     text-decoration: none;
+    transition: 0.3s all ease-in-out;
 
     &[class*='cta'] {
         padding: 10px;
