--- a/themes/ca_theme/src/styles/templates/_page-title.scss
+++ b/themes/ca_theme/src/styles/templates/_page-title.scss
@@ -2,6 +2,10 @@
     background-color: $grey-ca;
     margin-top: 0;
 
+    .site-page & {
+        margin-bottom: 0;
+    }
+
     &_content {
         display: flex;
         align-items: end;
