--- a/themes/ca_theme/src/styles/templates/_fullscreen-hero.scss
+++ b/themes/ca_theme/src/styles/templates/_fullscreen-hero.scss
@@ -51,5 +51,23 @@
         &[class*='droite'] {
             right: 0;
         }
+
+        .fs_link {
+            background-color: $jaune-ca;
+            font-size: 2.5rem;
+            display: block;
+            padding: 20px;
+            width: fit-content;
+            position: absolute;
+            right: 50px;
+            top: 50%;
+            transform: translateY(-50%);
+
+ /*            &:hover, &:focus {
+                background-color: $vert-ca;
+                text-decoration: underline;
+                transition: 0.3s all ease-in-out;
+            } */
+        }
     }
 }
