added informations generales section

--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -18,6 +18,7 @@
 
 @import 'templates/site-list';
 @import 'templates/site-card';
+@import 'templates/site-infos';
 
 @import 'templates/emploi-card';
 @import 'templates/emploi-videos-block';
