--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -19,6 +19,7 @@
 @import 'templates/site-list';
 @import 'templates/site-card';
 @import 'templates/site-infos';
+@import 'templates/infos-importantes';
 
 @import 'templates/emploi-card';
 @import 'templates/emploi-videos-block';
