--- a/themes/ca_theme/src/styles/templates/_fullscreen-hero.scss
+++ b/themes/ca_theme/src/styles/templates/_fullscreen-hero.scss
@@ -52,16 +52,19 @@
             right: 0;
         }
 
-        .fs_link {
-            background-color: $jaune-ca;
-            font-size: 2.5rem;
-            display: block;
-            padding: 20px;
-            width: fit-content;
+        .ctas-holder {
             position: absolute;
             right: 50px;
             top: 50%;
             transform: translateY(-50%);
+            width: fit-content;
+        }
+
+        .fs_link {
+            font-size: 2.5rem;
+            display: inline-block;
+            padding: 20px;
+            
         }
     }
 }
