--- a/themes/ca_theme/src/styles/templates/_fullscreen-hero.scss
+++ b/themes/ca_theme/src/styles/templates/_fullscreen-hero.scss
@@ -5,6 +5,7 @@
     &-container {
         position: relative;
         max-width: 2000px;
+        margin: 0;
     }
 
     img {
@@ -27,9 +28,13 @@
 
         h2 {
             color: white;
-            font-size: 6rem;
+            font-size: 4rem;
             line-height: 1;
             margin: 0;
+
+            @media #{$medium-plus} {
+                font-size: 6rem;
+            }
         }
 
         p {
@@ -53,17 +58,28 @@
         }
 
         .ctas-holder {
-            position: absolute;
-            right: 50px;
-            top: 50%;
-            transform: translateY(-50%);
-            width: fit-content;
+            display: flex;
+            justify-content: space-around;
+
+            @media #{$xxlarge-plus} {
+                display: block;
+                position: absolute;
+                right: 50px;
+                top: 50%;
+                transform: translateY(-50%);
+                width: fit-content;
+            }
         }
 
         .fs_link {
-            font-size: 2.5rem;
-            display: inline-block;
-            padding: 20px;
+            font-size: 1.8rem;
+            
+
+            @media #{$xxlarge-plus} {
+                font-size: 2.5rem;
+                display: inline-block;
+                padding: 20px;
+            }
             
         }
     }
