--- a/themes/ca_theme/src/styles/templates/_page-title.scss
+++ b/themes/ca_theme/src/styles/templates/_page-title.scss
@@ -10,10 +10,10 @@
         display: flex;
         align-items: end;
         justify-content: center;
-        height: 75px;
+        min-height: 75px;
 
         @media #{$medium-plus} {
-            height: 150px;
+            min-height: 160px;
         }
 
         h1 {
@@ -21,9 +21,10 @@
             margin: 0;
             line-height: 0.9;
             text-transform: uppercase;
+            text-align: center;
 
             @media #{$medium-plus} {
-                font-size: 12rem;
+                font-size: 10rem;
             }
         }
     }
