--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -1,6 +1,8 @@
 @import 'bases';
 @import 'header';
 
+@import 'becma-slider';
+
 @import 'templates/fullscreen-hero';
 @import 'templates/card-group';
 @import 'templates/ratio';
