--- a/themes/ca_theme/src/styles/templates/_equipe-card.scss
+++ b/themes/ca_theme/src/styles/templates/_equipe-card.scss
@@ -4,6 +4,7 @@
     text-align: center;
     margin: 150px 50px 50px;
     padding: 50px 30px;
+    flex-shrink: 0;
 
     img {
         max-height: 220px;
