--- a/themes/ca_theme/src/styles/templates/_fullscreen-hero.scss
+++ b/themes/ca_theme/src/styles/templates/_fullscreen-hero.scss
@@ -5,7 +5,7 @@
     &-container {
         position: relative;
         max-width: 2000px;
-        margin: 0;
+        margin: 0 auto;
     }
 
     img {
