--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -25,4 +25,6 @@
 @import 'templates/emploi-videos-block';
 @import 'templates/emploi-passions-block';
 
+@import 'templates/section-texte';
+
 @import 'footer';
