--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import 'header';
 
 @import 'becma-slider';
+@import 'templates/avertissement';
 
 @import 'templates/fullscreen-hero';
 @import 'templates/card-group';
@@ -22,6 +23,7 @@
 @import 'templates/site-card';
 @import 'templates/site-infos';
 @import 'templates/infos-importantes';
+@import 'templates/sacs';
 
 @import 'templates/emploi-card';
 @import 'templates/emploi-videos-block';
