added faq section

--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -24,6 +24,8 @@
 @import 'templates/site-infos';
 @import 'templates/infos-importantes';
 @import 'templates/sacs';
+@import 'templates/faq';
+@import 'templates/faq_block';
 
 @import 'templates/emploi-card';
 @import 'templates/emploi-videos-block';
