optimized faq template

--- a/themes/ca_theme/src/styles/templates/_faq_block.scss
+++ b/themes/ca_theme/src/styles/templates/_faq_block.scss
@@ -41,6 +41,7 @@
         &:hover, &:focus {
             .fa-solid {
                 font-size: 4rem;
+                color: $mauve-ca;
             }
         }
 
