added form to site page

--- a/themes/ca_theme/src/styles/templates/_contact.scss
+++ b/themes/ca_theme/src/styles/templates/_contact.scss
@@ -1,6 +1,12 @@
 .contact {
     &-content {
         padding: 50px;
+
+        .site-page & {
+            h2 {
+                text-align: center;
+            }
+        }
         
         form {
             width: 80%;
