added camps list page

--- a/themes/ca_theme/src/styles/_bases.scss
+++ b/themes/ca_theme/src/styles/_bases.scss
@@ -125,3 +125,13 @@ h4 {
     margin: 0;
     font-size: 2rem;
 }
+
+.sr-only {
+    clip: rect(0 0 0 0);
+    clip-path: inset(100%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap; 
+    width: 1px;
+}
