--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -27,6 +27,10 @@
 @import 'templates/faq';
 @import 'templates/faq_block';
 
+@import 'templates/camps-filtres';
+@import 'templates/camps-list';
+@import 'templates/camp-card';
+
 @import 'templates/emploi-card';
 @import 'templates/emploi-videos-block';
 @import 'templates/emploi-passions-block';
