--- a/themes/ca_theme/src/styles/templates/_camps-list.scss
+++ b/themes/ca_theme/src/styles/templates/_camps-list.scss
@@ -1,7 +1,9 @@
 .liste-camps {
     &-content {
         display: flex;
+        gap: 60px 50px;
         justify-content: space-evenly;
+        flex-wrap: wrap;
         margin-top: 80px;
     }
 }
