layout for single camp page

--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -27,6 +27,9 @@
 @import 'templates/faq';
 @import 'templates/faq_block';
 
+@import 'templates/camps-info';
+@import 'templates/couts-camps';
+
 @import 'templates/emploi-card';
 @import 'templates/emploi-videos-block';
 @import 'templates/emploi-passions-block';
