--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -3,6 +3,7 @@
 
 @import 'becma-slider';
 @import 'templates/avertissement';
+@import 'templates/single-video';
 
 @import 'templates/fullscreen-hero';
 @import 'templates/card-group';
