--- a/themes/ca_theme/src/styles/main.scss
+++ b/themes/ca_theme/src/styles/main.scss
@@ -36,6 +36,8 @@
 @import 'templates/emploi-passions-block';
 @import 'templates/emploi-formulaire';
 
+@import 'templates/nous-joindre';
+
 @import 'templates/section-texte';
 
 @import 'footer';
